k8sapps/k8s-cluster-deploy/multi_paths_ingress_deploy/echo_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: echo-ingress
  name: echo-ingress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: echo-ingress
status:
  loadBalancer: {}
