k8sapps/k8s-cluster-deploy/multi_paths_ingress_deploy/hello_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-ingress
  name: hello-ingress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-ingress
status:
  loadBalancer: {}
